gobmkida/g3/recognize_eye
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/recognize_eye/src/engine/optics.c:1882:9: error: use of undeclared identifier 'byte_A6B97F'
while ( byte_A6B97F[v31] ); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/recognize_eye/src/engine/optics.c:1921:7: error: use of undeclared identifier 'byte_A6B97F'
if ( !byte_A6B97F[++v40] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/recognize_eye/src/engine/optics.c:1983:9: error: use of undeclared identifier 'byte_A6B97F'
while ( byte_A6B97F[v53] ); 
        ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/recognize_eye/src/obj/1/optics.o] Error 1
